# readsettings

./: .gitattributes  .gitignore  .travis.yml  CNAME  LICENSE  README.md  READMEfr.md  a.json  appconfig.settings  index.md  readsettings.py  requirements.txt  runmodule.bat  setup.cfg  setup.py  testfile.json
.github/: FUNDING.yml
docs/: CNAME  _config.yml  conf.py  index.html  index.rst  styles.css
docs/manifests/: browserconfig.xml  manifest.json
project/: [Windows Only] Run Wizard.lnk  appconfig.settings  readsettings.py  run wizard.bat  runmodule.bat  wizard.py
readsettings/: __init__.py
src/: demo.py  readsettings.py  setup.py
src/readsettings/: __init__.py
