[metadata]
name = readsettings
author = Richie Bendall
author_email = richiebendall@gmail.com
description = Easily create, edit and remove a customized settings file which you can use for storing all of the settings for your app
url = https://github.com/Richienb/readsettings-python
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = quilt_lang
